--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/beanLau/douxue-api#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
